(add new changes on top of this file)

2018-01-02 Franz Holzinger  <franz@ttproducts.de>
    * Update code for TYPO3 8.7.9

2017-09-06 Franz Holzinger  <franz@ttproducts.de>
    * New version due to TER security incident TYPO3-PSA-2017-001

2017-04-20 Franz Holzinger  <franz@ttproducts.de>

	* Recreation with new code for TYPO3 7.6.14
	* add dynamic information to the text label shown in the Extension Manager for an extension. XCLASS for typo3_src-7.6.14/typo3/sysext/extensionmanager/Classes/Domain/Repository/ConfigurationItemRepository.php  function getConfigurationArrayFromExtensionKey

2009-04-20 Franz Holzinger  <franz@ttproducts.de>

	* Initial release