@@ -1,0 +1,2 @@
+Several patches for the TYPO3 Extension Manager are collected in this
+extension.
