@@ -1,2 +1,0 @@
-
-Several patches for the TYPO3 Extension Manager are collected in this extension.
