@@ -1,0 +1,39 @@
+{
+  "name": "jambagecom/patchem",
+  "type": "typo3-cms-extension",
+  "description": "Patches for the Extension Manager (em).",
+  "keywords": [
+    "TYPO3",
+    "extension"
+  ],
+  "support": {
+    "issues": "https://jambage.com/kontakt/forum.html"
+  },
+  "homepage": "https://jambage.com",
+  "authors": [
+    {
+      "name": "Franz Holzinger",
+      "role": "Developer",
+      "homepage": "https://ttproducts.de"
+    }
+  ],
+  "license": [
+    "GPL-2.0-or-later"
+  ],
+  "require": {
+    "typo3/cms-core": "^6.2 || ^7.6 || ^8.7"
+  },
+  "autoload": {
+    "psr-4": {
+      "JambageCom\\Patchem\\": "Classes"
+    }
+  },
+  "replace": {
+    "typo3-ter/patchem": "self.version"
+  },
+  "extra": {
+    "typo3/cms": {
+      "extension-key": "patchem"
+    }
+  }
+}
