@@ -1,10 +1,8 @@
 <?php
-if (!defined ('TYPO3_MODE')) {
-	die ('Access denied.');
-}
+defined('TYPO3_MODE') || die('Access denied.');
 
-$GLOBALS['TYPO3_CONF_VARS']['SYS']['Objects']['TYPO3\\CMS\\Extensionmanager\\Domain\\Repository\\ConfigurationItemRepository'] = array(
-	'className' => 'Bugfix\\Patchem\\Domain\\Repository\\ConfigurationItemRepository'
-);
+$GLOBALS['TYPO3_CONF_VARS']['SYS']['Objects']['TYPO3\\CMS\\Extensionmanager\\Domain\\Repository\\ConfigurationItemRepository'] = [
+    'className' => 'Bugfix\\Patchem\\Domain\\Repository\\ConfigurationItemRepository'
+];
 
 
